[build-system]
requires = ["setuptools >= 38.3.0", "wheel"]

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | versioneer.py
  | lpsd/_version.py
  | docs/config.py
)
'''