[metadata]
name = lpsd
description = Method for calulating power spectrum on logarithmic frequency axis.
url = https://github.com/bleykauf/lpsd
author = Rudolf W. Byker
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.7
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    numpy
    scipy
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = lpsd/_version.py
versionfile_build = lpsd/_version.py
tag_prefix =
parentdir_prefix =lpsd-